<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ua.golovchenko.artem</groupId>
    <artifactId>SessionManager</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>


    <name>SessionManager</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <!-- Плагин упаковки в WAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <webResources>
                        <resource>

                            <!-- Путь к ресурсам приложения (картинки, CSS, JavaScript...) -->
                            <!--directory>src/main/resources</directory-->
                            <directory>resources</directory>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
            <!-- Плагин для запуска сервера Tomcat (он же контейнер сервлетов) через Maven
                 Для запуска перейдите в корень проекта (там где pom.xml) и введите в консоли:

                 mvn tomcat7:run
            -->
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <!-- Контекст приложения. В данном случае приложение будет доступно по адресу

                    http://localhost:8080/

                    -->
                    <path>/</path>
                    <systemProperties>
                        <!-- Настройки используемой памяти и дебага -->
                        <JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
                    </systemProperties>

                    <!-- Для деплоя проекта сразу на сервер Tomcat
                        дополнительно необходимо внести настройки(логин\пароль )в C:\Program Files\apache-maven-3.3.9\conf\settings.xml-->
                    <url>http://localhost:8090/manager/text</url>
                    <server>TomcatServer</server>
                    <path>/${project.artifactId}</path>

                </configuration>
            </plugin>
        </plugins>
    </build>


<dependencies>
    <!-- Подключаем библиотеку controller API -->
    <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>3.1.0</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>jstl</groupId>
        <artifactId>jstl</artifactId>
        <version>1.2</version>
    </dependency>
</dependencies>

</project>